# Graphic_Computing

./: README.md
CG_G31__4_Fase/engine/: CMakeLists.txt  Camera.cpp  Camera.h  Curvas.cpp  Curvas.h  Group.cpp  Group.h  Illumination.cpp  Illumination.h  Light.cpp  Light.h  Point.h  Position.cpp  Rotate.cpp  SysLight.cpp  SysLight.h  Transform.cpp  Transform.h  Translate.cpp  Translate.h  main.cpp  parser.cpp  parser.h  tinyxml2.h
CG_G31__4_Fase/engine/testes/: bola.xml  box_nt.3d  caixa.xml  cone_nt.3d  mine.3d  plane_nt.3d  sistema_Solar.xml  sistema_Solar_Text.xml  sphere_nt.3d  terra.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml  test_4_7.xml  texturas.xml
CG_G31__4_Fase/generator/: main.cpp
TP_Fase1_Grupo31/engine/: CMakeLists.txt  Camera.h  LookAt.cpp  Position.h  Up.cpp  box.3d  cone.3d  main.cpp  parser.cpp  parser.h  plane.3d  sphere.3d
TP_Fase1_Grupo31/generator/: main.cpp
TP_Fase2_Grupo31/engine/: CMakeLists.txt  Camera.cpp  Camera.h  Group.cpp  Group.h  Projection.cpp  Projection.h  Rotate.cpp  Rotate.h  Scale.h  Transform.cpp  Transform.h  Translate.cpp  Translate.h  Up.h  Vertex.cpp  main.cpp  parser.cpp
TP_Fase2_Grupo31/engine/testes/: cone.3d  plane.3d  sistema_Solar.xml  sphere.3d
TP_Fase2_Grupo31/generator/: main.cpp
TP_Fase3_1_Grupo31/engine/: CMakeLists.txt  Group.cpp  Group.h  LookAt.h  Point.cpp  Rotate.h  Scale.cpp  Transform.cpp  Transform.h  Translate.cpp  Translate.h  Vertex.h  main.cpp  parser.cpp  parser.h  testesplane.3d  testessphere.3d  tinyxml2.cpp
TP_Fase3_1_Grupo31/engine/testes/: cone.3d  plane.3d  sphere.3d  test_3_1.xml
TP_Fase3_1_Grupo31/generator/: Curvas.cpp  Curvas.h  main.cpp
